static/struts/egress-disabled.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: struts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: struts
  labels:
    app: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
       app: api-server
  template:
    metadata:
     labels:
       app: api-server
       tier: web
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - image: connorg/struts:0.0.2-ro
        name: api
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: struts
spec:
  podSelector:
    matchLabels:
      app: api-server
  policyTypes:
  - Egress
---
apiVersion: v1
kind: Service
metadata:
  name: struts
  namespace: struts
spec:
  selector:
    app: api-server
  ports:
    - name: https
      protocol: TCP
      nodePort: 30005
      port: 30005
      targetPort: 8080
  type: NodePort
